# strealome

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci-cd.yml
frontend/: index.html  login.html  register.html  stream.html
src/: main.rs
src/controller/: error.rs  index.rs  jwt.rs  login.rs  mod.rs  register.rs  response.rs  root.rs
src/controller/http/: chat.rs  gateway.rs  index.rs  login.rs  logout.rs  mod.rs  password_change.rs  profile.rs  register.rs  room.rs
src/controller/http/chat/: gateway.rs  message.rs  mod.rs
src/controller/http/room/: create.rs  detail.rs  mod.rs  my.rs  response.rs  transfer.rs  user.rs  user_list.rs
src/controller/http/static/: index.rs  login.rs  mod.rs  register.rs  stream.rs
src/controller/http/user/: login.rs  logout.rs  mod.rs  profile.rs  register.rs
src/controller/webrtc/: mod.rs  resource.rs  whip.rs
src/controller/ws/: chat.rs  mod.rs
src/model/: chat.rs  mod.rs  user.rs
src/model/chat/: author.rs  message.rs  mod.rs
src/model/chat/signal/: handshake.rs  mod.rs  ping.rs
src/model/chat/signal/event/: chat.rs  join.rs  leave.rs  message.rs  mod.rs  transfer.rs
src/model/whip/: mod.rs  sdp.rs
src/repository/: config.rs  crud.rs  duckdb_impl.rs  error.rs  mod.rs  sqlite_impl.rs  user.rs
src/service/: chat.rs  error.rs  mod.rs  room.rs  user.rs
src/service/webrtc/: error.rs  mod.rs  whip.rs
src/signal/: mod.rs
