[package]
name = "strealome"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
jsonwebtoken = "9.3.1"
duckdb = { version = "1.2.2", features = ["chrono", "bundled"]}

futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "0.1.88"

chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
regex = "1.11.1"
