[package]
name = "strealome"
version = "0.1.0"
edition = "2024"

[features]
default = ["repo_sqlite"]
repo_duckdb = ["duckdb"]
repo_sqlite = ["rusqlite"]

[dependencies]
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
jsonwebtoken = "9.3.1"

webrtc = "0.13.0"

bcrypt = "0.17.0"
duckdb = { version = "1.2.2", features = ["chrono", "bundled"], optional = true }
rusqlite = { version = "0.36.0", features = ["chrono"], optional = true }

futures = "0.3.31"
tokio = { version = "1.45.0", features = ["full"] }
dashmap = "7.0.0-rc2"
async-trait = "0.1.88"

rand = "0.9.1"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
